test/pos/schema-with-select.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name select-example

document
  field name required
    scalar string
  select required
    variant active
      flag
    variant inactive
      flag
    variant unknown
      flag
