test/neg/e208-layer-variant-overlap.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name e208-test

document
  field name required
    scalar string

layer
  name extension
  root
    select
      variant name
        flag
      variant other
        flag
